--- a/Nevot/edt.html
+++ b/Nevot/edt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cette page contient votre emploi du temps">
-    <title>NevotLink - Emploi du temps</title>
+    <title>NevotLinks - Emploi du temps</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/calendar_fat.css">
     <link rel="stylesheet" href="css/bg.css">
