--- a/Nevot/index.html
+++ b/Nevot/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cette page est le coeur du site NevotLink. Elle permet d'accéder à toutes les informations principales du site.">
-    <title>NevotLink - Accueil</title>
+    <meta name="description" content="Cette page est le coeur du site NevotLinks. Elle permet d'accéder à toutes les informations principales du site.">
+    <title>NevotLinks - Accueil</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/calendar.css">
     <link rel="stylesheet" href="css/links.css">
