--- a/Nevot/ressources.html
+++ b/Nevot/ressources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cette page permet d'accéder à toutes les resources stockées par le site">
-    <title>NevotLink - Ressources</title>
+    <title>NevotLinks - Ressources</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bg.css">
     <link rel="icon" type="image/svg+xml" href="img/icon.svg">
