--- a/CIV/index.html
+++ b/CIV/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cette page est le coeur du site LawDash. Elle permet d'accéder à toutes les informations principales du site.">
+    <meta name="description" content="Cette page est le coeur du site CIV-ETU Elle permet d'accéder à toutes les informations principales du site.">
     <title>CIV-ETU - Accueil</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/calendar.css">
